增加进程启停的测试用例
(cherry picked from commit 9fcad0fc3bcb5cdacf141fa252f20049b3e9ea4e)